--- a/src/team_detail.html
+++ b/src/team_detail.html
@@ -10,6 +10,7 @@
     <link href="../dist/output.css" rel="stylesheet">
     <link href="../script.css" rel="stylesheet">
     <link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="../swiper/tailwind.css">
     <link rel="stylesheet" href="../swiper/custom.css">
     <link rel="stylesheet" href="../swiper/color.css">
     <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
@@ -209,13 +210,13 @@
                         <h3 class="text-white font-FuturaPTMedium text-[24px] mx-[10px] py-[14px]">Достижения:</h3>
                     </div>
 
-                    <div class="lg:flex ml-[32px] mt-[14px]">
+                    <div class="lg:!flex !ml-[32px] !mt-[14px]">
                         <div
-                            class="bg-[#d94350] text-white font-Futuris text-[14px] font-light h-[40px] pt-[14px] px-[26px] mt-[4px] max-w-[83px]">
+                            class="!bg-[#d94350] !text-white !font-Futuris !text-[14px] !font-light !h-[40px] !pt-[14px] !px-[26px] !mt-[4px] !max-w-[83px]">
                             2017</div>
-                        <a class="ml-[100px] pr-[40px]"
+                        <a class="!ml-[100px] !pr-[40px]"
                             href="https://steamuserimages-a.akamaihd.net/ugc/1720911995169071125/98B43C6CEA877394ABB61498311C6AD1DD747227/" data-lightbox="roadtrip">
-                            <p class="font-Futuris text-white text-[18px] leading-[26px]">Сертификат участника XIV
+                            <p class="!font-Futuris !text-white !text-[18px] !leading-[26px]">Сертификат участника XIV
                                 Международной научно-практической конференции, посвященной памяти профессора М.И.
                                 Ковалева</p>
                         </a>
@@ -225,7 +226,7 @@
                         <div
                             class="bg-[#d94350] text-white font-Futuris text-[14px] font-light h-[40px] pt-[14px] px-[26px] mt-[4px] max-w-[83px]">
                             2017</div>
-                        <a class="ml-[100px] pr-[40px]"
+                        <a class="!ml-[100px] !pr-[40px]"
                             href="https://dere.shikimori.one/system/user_images/original/205994/1835199.jpg" data-lightbox="roadtrip">
                             <p class="font-Futuris text-white text-[18px] leading-[26px]">Сертификат участника XIV
                                 Международной научно-практической конференции, посвященной памяти профессора М.И.
@@ -237,17 +238,17 @@
                         <div
                             class="bg-[#d94350] text-white font-Futuris text-[14px] font-light h-[40px] pt-[14px] px-[26px] mt-[4px] max-w-[83px]">
                             2017</div>
-                        <a class="ml-[100px] pr-[40px]"
+                        <a class="!ml-[100px] !pr-[40px]"
                             href="https://steamuserimages-a.akamaihd.net/ugc/1720911995169183316/1AE7CE67C25119BD1C9754565F3DAA93E6E7D591/" data-lightbox="roadtrip">
                             <p class="font-Futuris text-white text-[18px] leading-[26px]">Всероссийская конференция
                                 «Развитие института банкротства в ответ на вызовы современности»</p>
                         </a>
                     </div>
 
-                    <button class="flex mt-[15px] ml-[15px] show_ach_button" onclick="showAchievements()">
-                        <i class="fas fa-circle text-white text-[4px] mt-[4px]"></i>
+                    <button class="!flex !mt-[15px] !ml-[15px] show_ach_button" onclick="showAchievements()">
+                        <i class="fas fa-circle !text-white !text-[4px] !mt-[4px]"></i>
                         <span
-                            class="text-white text-[14px] font-Helvetica ml-[16px] hover:text-black duration-300">Показать
+                            class="!text-white !text-[14px] !font-Helvetica !ml-[16px] hover:!text-black !duration-300">Показать
                             все достижения (47562)</span>
                     </button>
 
@@ -287,10 +288,10 @@
                             </a>
                         </div>
 
-                        <button class="flex hidden_ach_button relative top-[12px] right-[14px]"
+                        <button class="!flex hidden_ach_button !relative !top-[12px] !right-[14px]"
                             onclick="hideAchievements()">
                             <span
-                                class="text-white text-[14px] font-Helvetica ml-[16px] hover:text-black duration-300">Скрыть</span>
+                                class="!text-white !text-[14px] !font-Helvetica !ml-[16px] hover:!text-black !duration-300">Скрыть</span>
                         </button>
                     </div>
 
@@ -301,23 +302,23 @@
 
                 <div class="lg:flex block lg:mt-0 mt-[30px]">
                     <!--Книги-->
-                    <div class="bg-[url('../img/fon-2.png')] lg:w-[50%]">
-                        <div class="bg-[#545454] max-h-[40px]">
-                            <h3 class="text-white font-FuturaPTMedium text-[24px] mx-[10px] py-[14px]">Книги:</h3>
+                    <div class="!bg-[url('../img/fon-2.png')] lg:!w-[50%]">
+                        <div class="!bg-[#545454] !max-h-[40px]">
+                            <h3 class="!text-white !font-FuturaPTMedium !text-[24px] !mx-[10px] !py-[14px]">Книги:</h3>
                         </div>
-                        <div class="w-full lg:mb-[30px] pb-[30px]">
+                        <div class="!w-full lg:!mb-[30px] !pb-[30px]">
                             <div class="padding-accordion">
                                 <div class="cp_aaccordion-row">
 
                                     <!-- item1 -->
                                     <div class="accordion_cp accordion-close" id="asection20">
-                                        <i class="fas fa-check absolute left-[20px] text-[9px] text-[#999]"></i>
+                                        <i class="fas fa-check !absolute !left-[20px] !text-[9px] !text-[#999]"></i>
                                         Искусство Войны
-                                        <span><i class="fa fa-minus text-[#999]"></i></span>
+                                        <span><i class="fa fa-minus !text-[#999]"></i></span>
                                     </div>
                                     <div class="contain_cp_accor" style="display: none;">
                                         <div class="content_cp_accor">
-                                            <p class="text-black text-[18px] leading-[22px]">Сборник научных работ
+                                            <p class="!text-black !text-[18px] !leading-[22px]">Сборник научных работ
                                                 аспирантов и студентов ВАГС: Сб.
                                                 научных трудов. - Вып 6. – Волгоград: Изд-во ВАГС, 2004.</p>
                                         </div>
@@ -341,11 +342,11 @@
                                     </div>
 
 
-                                    <button class="flex mt-[15px] ml-[15px] show_bks_button"
+                                    <button class="!flex !mt-[15px] !ml-[15px] show_bks_button"
                                         onclick="showBooks()">
-                                        <i class="fas fa-circle text-white text-[4px] mt-[4px]"></i>
+                                        <i class="fas fa-circle !text-white !text-[4px] !mt-[4px]"></i>
                                         <span
-                                            class="text-white text-[14px] font-Helvetica ml-[16px] hover:text-black duration-300">
+                                            class="!text-white !text-[14px] !font-Helvetica !ml-[16px] hover:!text-black !duration-300">
                                             Показать все (47562)</span>
                                     </button>
 
@@ -386,10 +387,10 @@
                                             </div>
                                         </div>
 
-                                        <button class="flex hidden_bks_button relative top-[12px] right-[14px]"
+                                        <button class="!flex hidden_bks_button !relative !top-[12px] !right-[14px]"
                                             onclick="hideBooks()">
                                             <span
-                                                class="text-white text-[14px] font-Helvetica ml-[16px] hover:text-black duration-300">Скрыть</span>
+                                                class="!text-white !text-[14px] !font-Helvetica !ml-[16px] hover:!text-black !duration-300">Скрыть</span>
                                         </button>
                                     </div>
 
@@ -399,24 +400,24 @@
                     </div>
 
                     <!--Статьи-->
-                    <div class="bg-[url('../img/fon-2.png')] lg:w-[50%]">
-                        <div class="bg-[#545454]">
-                            <h3 class="text-white font-FuturaPTMedium text-[24px] mx-[10px] py-[14px]">Статьи:</h3>
+                    <div class="!bg-[url('../img/fon-2.png')] lg:!w-[50%]">
+                        <div class="!bg-[#545454]">
+                            <h3 class="!text-white !font-FuturaPTMedium !text-[24px] !mx-[10px] !py-[14px]">Статьи:</h3>
                         </div>
 
-                        <div class="w-full mb-[30px] pb-[30px]">
+                        <div class="!w-full !mb-[30px] !pb-[30px]">
                             <div class="padding-accordion">
                                 <div class="cp_aaccordion-row">
 
                                     <!-- item1 -->
                                     <div class="accordion_cp accordion-close" id="asection20">
-                                        <i class="fas fa-check absolute left-[20px] text-[9px] text-[#999]"></i>
+                                        <i class="fas fa-check !absolute !left-[20px] !text-[9px] !text-[#999]"></i>
                                         ывафафывафыафывафыва
-                                        <span><i class="fa fa-minus text-[#999]"></i></span>
+                                        <span><i class="fa fa-minus !text-[#999]"></i></span>
                                     </div>
                                     <div class="contain_cp_accor" style="display: none;">
                                         <div class="content_cp_accor">
-                                            <p class="text-black text-[18px] leading-[22px]">Сборник научных работ
+                                            <p class="!text-black !text-[18px] !leading-[22px]">Сборник научных работ
                                                 аспирантов и студентов ВАГС: Сб.
                                                 научных трудов. - Вып 6. – Волгоград: Изд-во ВАГС, 2004.</p>
                                         </div>
@@ -442,11 +443,11 @@
                                         </div>
                                     </div>
 
-                                    <button class="flex mt-[15px] ml-[15px] show_art_button"
+                                    <button class="!flex !mt-[15px] !ml-[15px] show_art_button"
                                         onclick="showArticles()">
-                                        <i class="fas fa-circle text-white text-[4px] mt-[4px]"></i>
+                                        <i class="fas fa-circle !text-white !text-[4px] !mt-[4px]"></i>
                                         <span
-                                            class="text-white text-[14px] font-Helvetica ml-[16px] hover:text-black duration-300">
+                                            class="!text-white !text-[14px] !font-Helvetica !ml-[16px] hover:!text-black !duration-300">
                                             Показать все (47562)</span>
                                     </button>
 
@@ -487,10 +488,10 @@
                                             </div>
                                         </div>
 
-                                        <button class="flex hidden_art_button relative top-[12px] right-[14px]"
+                                        <button class="!flex hidden_art_button !relative !top-[12px] !right-[14px]"
                                             onclick="hideArticles()">
                                             <span
-                                                class="text-white text-[14px] font-Helvetica ml-[16px] hover:text-black duration-300">Скрыть</span>
+                                                class="!text-white !text-[14px] !font-Helvetica !ml-[16px] hover:!text-black !duration-300">Скрыть</span>
                                         </button>
                                     </div>
 
