--- a/src/team_detail.html
+++ b/src/team_detail.html
@@ -149,18 +149,18 @@
                             </div>
                         </div>
                         <div class="lg:pl-[44px] sm:pl-[50px] sm:pt-[10px] pt-[60%] sm:-ml-0 -ml-[60%] sm:w-2/3 w-full">
-                            <h3 class="pt-[15px] font-Futura text-white sm:text-[30px] text-[26px] my-[10px] pb-[8px]">
+                            <h3 class="!pt-[15px] !font-Futura !text-white sm:!text-[30px] !text-[26px] !my-[10px] !pb-[8px]">
                                 Олег Сычев</h3>
-                            <span class="text-[#2B2727] font-AvenirNextCyr sm:text-[16px] text-[12px]">адвокат,
+                            <span class="!text-[#2B2727] !font-AvenirNextCyr sm:!text-[16px] !text-[12px]">адвокат,
                                 управляющий партнер</span>
                             <div class="mt-[40px]">
-                                <h3 class="font-Futura mb-[22px] text-white sm:text-[24px] text-[20px]">Специализация:
+                                <h3 class="!font-Futura !mb-[22px] !text-white sm:!text-[24px] !text-[20px]">Специализация:
                                 </h3>
                                 <ul
-                                    class="font-FuturaPTBook text-white sm:text-[18px] text-[14px] sm:pl-[40px] pl-[15px]">
+                                    class="!font-FuturaPTBook !text-white sm:!text-[18px] !text-[14px] sm:!pl-[40px] !pl-[15px]">
                                     <div class="flex mt-[4px]"><i
                                             class="fas fa-square text-[10px] text-[#2B2727] pt-[7px] pr-[5px]"></i>
-                                        <li class="leading-[24px]">гражданское право</li>
+                                        <li class="!leading-[24px]">гражданское право</li>
                                     </div>
                                     <div class="flex mt-[4px]"><i
                                             class="fas fa-square text-[10px] text-[#2B2727] pt-[7px] pr-[5px]"></i>
@@ -183,10 +183,10 @@
                 <!--О себе-->
                 <div class="bg-[url('../img/fon-2.png')] pb-[15px]">
                     <div class="bg-[#545454]">
-                        <h3 class="text-white font-FuturaPTMedium text-[24px] mx-[10px] py-[14px]">О себе</h3>
+                        <h3 class="!text-white !font-FuturaPTMedium !text-[24px] !mx-[10px] !py-[14px]">О себе</h3>
                     </div>
                     <div>
-                        <p class="font-Futuris text-white m-[10px] text-[18px] leading-[24px]">
+                        <p class="!font-Futuris !text-white !m-[10px] !text-[18px] !leading-[24px]">
                             с 2003 г. Адвокат, управляющий партнер коллегии адвокатов «Мейер и партнеры».
                             <br>
                             Специалист в области гражданского права, в том числе правового регулирования процедур
@@ -205,9 +205,9 @@
                 </div>
 
                 <!--Достижения -->
-                <div class="bg-[url('../img/fon-2.png')] pb-[15px]">
-                    <div class="bg-[#545454]">
-                        <h3 class="text-white font-FuturaPTMedium text-[24px] mx-[10px] py-[14px]">Достижения:</h3>
+                <div class="bg-[url('../img/fon-2.png')] !pb-[15px]">
+                    <div class="!bg-[#545454]">
+                        <h3 class="!text-white !font-FuturaPTMedium !text-[24px] !mx-[10px] !py-[14px]">Достижения:</h3>
                     </div>
 
                     <div class="lg:!flex !ml-[32px] !mt-[14px]">
