Исправлены хедеры статьи и книги

--- a/src/team_detail.html
+++ b/src/team_detail.html
@@ -303,8 +303,8 @@
                 <div class="lg:flex block lg:mt-0 mt-[30px]">
                     <!--Книги-->
                     <div class="!bg-[url('../img/fon-2.png')] lg:!w-[50%]">
-                        <div class="!bg-[#545454] !max-h-[40px]">
-                            <h3 class="!text-white !font-FuturaPTMedium !text-[24px] !mx-[10px] !py-[14px]">Книги:</h3>
+                        <div class="!bg-[#545454] !max-h-[44px]">
+                            <h3 class="!text-white !font-FuturaPTMedium !text-[24px] !mb-0 !p-[10px]">Книги:</h3>
                         </div>
                         <div class="!w-full lg:!mb-[30px] !pb-[30px]">
                             <div class="padding-accordion">
@@ -401,7 +401,7 @@
 
                     <!--Статьи-->
                     <div class="!bg-[url('../img/fon-2.png')] lg:!w-[50%]">
-                        <div class="!bg-[#545454]">
+                        <div class="!bg-[#545454] !max-h-[40px]">
                             <h3 class="!text-white !font-FuturaPTMedium !text-[24px] !mx-[10px] !py-[14px]">Статьи:</h3>
                         </div>
 
