Добавлены нужные классы

--- a/src/search.html
+++ b/src/search.html
@@ -148,7 +148,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<input placeholder="Что будем искать?" id="search_inp" class="search-input" value="Дело">
-								<a href="#search_results" id="search-lnk" class="btn-style-1">Найти</a>
+								<a href="#search_results" id="search-lnk" class="btn-style-1 py-[20px]">Найти</a>
 							</div>
 							<div class="coll-md-12" id="search_results" style="margin-top:15px; font-size:16px;">
 								<h2>Результаты поиска: "Дело". Совпадений: 46</h2>
