--- a/src/proBono.html
+++ b/src/proBono.html
@@ -146,7 +146,7 @@
 			<div id="main" class="probono-page">
 				<section class="cp-blog padding-top-btm-60-30 practice-page-bg-new">
 					<div class="container mx-auto">
-						<div class="row flex flex-col">
+						<div class="row flex flex-col pl-[40px]">
 							<p>Жители Волгоградской области в 
 								силу удаленности и обособленности своих населенных пунктов, тяжелого материального положения
 								 зачастую были лишены возможности обратиться к квалифицированному юристу непосредственно. Система государственных юридических 
