Исправлена поисковая строка

--- a/src/search.html
+++ b/src/search.html
@@ -147,7 +147,7 @@
 					<div class="container mx-auto">
 						<div class="row">
 							<div class="col-md-12">
-								<input placeholder="Что будем искать?" id="search_inp" class="search-input" value="Дело">
+								<input placeholder="Что будем искать?" id="search_inp" class="placeholder:opacity-40 text-[#807c7c] search-input" value="Дело">
 								<a href="#search_results" id="search-lnk" class="btn-style-1 py-[20px]">Найти</a>
 							</div>
 							<div class="coll-md-12" id="search_results" style="margin-top:15px; font-size:16px;">
