Новости: переключатель страниц

--- a/src/news.html
+++ b/src/news.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../swiper/custom.css">
     <link rel="stylesheet" href="../swiper/color.css">
     <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="../src/simplePagination.css">
 
 
     <script src="../swiper/jquery-1.11.3.min.js"></script>
@@ -172,10 +173,16 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="col-md-12">
+							<div class="spaginator cp-pagination cp-pagination-space light-theme simple-pagination"><ul class="pagination"><li class="disabled"><span class="current prev">Назад</span></li><li class="active"><span class="current">1</span></li><li><a href="/news/all/2" class="page-link">2</a></li><li><a href="/news/all/3" class="page-link">3</a></li><li><a href="/news/all/4" class="page-link">4</a></li><li><a href="/news/all/5" class="page-link">5</a></li><li class=""><span class="ellipse clickable">…</span></li><li><a href="/news/all/41" class="page-link">41</a></li><li><a href="/news/all/42" class="page-link">42</a></li><li><a href="/news/all/2" class="page-link next">Дальше</a></li></ul></div>
+						</div>
 					</div>
 				</section>
 			</div>
 		</div>
+
+
 
 		<footer>
 			<section class="cp-footer-content">
