--- a/src/contacts.html
+++ b/src/contacts.html
@@ -127,70 +127,70 @@
 
 
         <div id="main">
-            <section class="float-left w-full bg-repeat bg-[url('../img/fon-2.png')] mb-[30px] block">
-                <div class="container mx-auto px-[15px] xl:max-w-[1170px] lg:max-w-[970px] md:max-w-[750px] max-w-none">
-                    <div class="-mx-[15px]">
-                        <div class="w-full float-left relative min-h-[1px] px-[15px] pt-[60px] lg:pb-[60px] md:pb-0 pb-0">
-                            <div class="grid grid-cols-12">
-                                <div class="xl:col-span-8 lg:col-span-8 md:col-span-12 col-span-12 px-[15px]">
-                                    <div class="float-left w-full">
+            <section class="!float-left !w-full !bg-repeat !bg-[url('../img/fon-2.png')] !mb-[30px] !block">
+                <div class="!container !mx-auto !px-[15px] xl:!max-w-[1170px] lg:!max-w-[970px] md:!max-w-[750px] !max-w-none">
+                    <div class="!-mx-[15px]">
+                        <div class="!w-full !float-left !relative !min-h-[1px] !px-[15px] !pt-[60px] lg:!pb-[60px] md:!pb-0 !pb-0">
+                            <div class="!grid !grid-cols-12">
+                                <div class="xl:!col-span-8 lg:!col-span-8 md:!col-span-12 !col-span-12 !px-[15px]">
+                                    <div class="!float-left !w-full">
                                         <h3
-                                            class="mb-[15px] font-Futura text-white text-[24px] leading-[24px] font-normal">
+                                            class="!mb-[15px] !font-Futura !text-white !text-[24px] !leading-[24px] !font-normal">
                                             Заполните данную форму,
                                             чтобы
                                             связаться с нами</h3>
                                         <form action="" method="post">
                                             <input type="hidden" name="action" value="contact">
 
-                                            <div class="-mx-[15px]">
-                                                <div class="grid grid-cols-12">
+                                            <div class="!-mx-[15px]">
+                                                <div class="!grid !grid-cols-12">
 
-                                                    <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
+                                                    <div class="xl:!col-span-6 lg:!col-span-6 md:!col-span-12 !col-span-12 !px-[15px]">
                                                         <input
-                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
-                                                            border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
-                                                            text-[14px] leading-[14px] font-normal text-[#666]"
+                                                            class="placeholder:!text-[#666] placeholder:!opacity-70 !float-left !w-full !h-[40px] !border-[1px] !border-solid 
+                                                            !border-[#c1c1c1] !px-[20px] !box-border !mb-[30px] !font-Futura 
+                                                            !text-[14px] !leading-[14px] !font-normal !text-[#666]"
                                                             type="text" placeholder="Ваше имя *">
                                                     </div>
 
-                                                    <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
+                                                    <div class="xl:!col-span-6 lg:!col-span-6 md:!col-span-12 !col-span-12 !px-[15px]">
                                                         <input
-                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
-                                                            border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
-                                                            text-[14px] leading-[14px] font-normal text-[#666]" type="text"
+                                                            class="placeholder:!text-[#666] placeholder:!opacity-70 !float-left !w-full !h-[40px] !border-[1px] !border-solid 
+                                                            !border-[#c1c1c1] !px-[20px] !box-border !mb-[30px] !font-Futura 
+                                                            !text-[14px] !leading-[14px] !font-normal !text-[#666]" type="text"
                                                             placeholder="Ваша Фамилия *">
                                                     </div>
 
-                                                    <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
+                                                    <div class="xl:!col-span-6 lg:!col-span-6 md:!col-span-12 !col-span-12 !px-[15px]">
                                                         <input
-                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
-                                                            border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
-                                                            text-[14px] leading-[14px] font-normal text-[#666]" type="text"
+                                                            class="placeholder:!text-[#666] placeholder:!opacity-70 !float-left !w-full !h-[40px] !border-[1px] !border-solid 
+                                                            !border-[#c1c1c1] !px-[20px] !box-border !mb-[30px] !font-Futura 
+                                                            !text-[14px] !leading-[14px] !font-normal !text-[#666]" type="text"
                                                             placeholder="Ваша электронная почта *"
                                                             pattern="^[a-zA-Z0-9-\_.]+@[a-zA-Z0-9-\_.]+\.[a-zA-Z0-9.]{2,5}$">
                                                     </div>
 
-                                                    <div class="xl:col-span-6 lg:col-span-6 md:col-span-12 col-span-12 px-[15px]">
+                                                    <div class="xl:!col-span-6 lg:!col-span-6 md:!col-span-12 !col-span-12 !px-[15px]">
                                                         <input
-                                                            class="placeholder:text-[#666] placeholder:opacity-70 float-left w-full h-[40px] border-[1px] border-solid 
-                                                            border-[#c1c1c1] px-[20px] box-border mb-[30px] font-Futura 
-                                                            text-[14px] leading-[14px] font-normal text-[#666]" type="text"
+                                                            class="placeholder:!text-[#666] placeholder:!opacity-70 !float-left !w-full !h-[40px] !border-[1px] !border-solid 
+                                                            !border-[#c1c1c1] !px-[20px] !box-border !mb-[30px] !font-Futura 
+                                                            !text-[14px] !leading-[14px] !font-normal !text-[#666]" type="text"
                                                             placeholder="Тема *">
                                                     </div>
 
-                                                    <div class="col-span-12 px-[15px]">
+                                                    <div class="!col-span-12 !px-[15px]">
                                                         <textarea
-                                                            class="float-left w-full h-[190px] resize-none border-[1px] border-solid 
-                                                        border-[#c1c1c1] px-[20px] py-[14px] box-border mb-[30px] font-Futura 
-                                                        text-[14px] leading-[14px] font-normal text-[#666] overflow-auto"
+                                                            class="!float-left !w-full !h-[190px] !resize-none !border-[1px] !border-solid 
+                                                        !border-[#c1c1c1] !px-[20px] !py-[14px] !box-border !mb-[30px] !font-Futura 
+                                                        !text-[14px] !leading-[14px] !font-normal !text-[#666] !overflow-auto"
                                                             name="comments" cols="10" rows="10"
                                                             placeholder="Ваш вопрос *"></textarea>
                                                     </div>
 
-                                                    <div class="md:col-span-12 px-[15px]">
+                                                    <div class="md:!col-span-12 !px-[15px]">
                                                         <input type="submit"
-                                                            class="mb-[20px] lg:mb-0 bg-[#ab2b3b] float-left py-[14px] px-[30px] border-0 m-0
-                                                        font-bold text-[14px] leading-[14px] font-Futura text-[#fff] uppercase cursor-pointer"
+                                                            class="!mb-[20px] lg:!mb-0 !bg-[#ab2b3b] !float-left !py-[14px] !px-[30px] !border-0 !m-0
+                                                        !font-bold !text-[14px] !leading-[14px] !font-Futura !text-[#fff] !uppercase !cursor-pointer"
                                                             value="Отправить">
                                                     </div>
                                                 </div>
@@ -198,45 +198,45 @@
                                         </form>
                                     </div>
                                 </div>
-                                <div class="xl:col-span-4 lg:col-span-4 md:col-span-12 col-span-12 px-[15px]">
-                                    <div class="float-left w-full">
+                                <div class="xl:!col-span-4 lg:!col-span-4 md:!col-span-12 !col-span-12 !px-[15px]">
+                                    <div class="!float-left !w-full">
                                         <h3
-                                            class="mb-[15px] font-Futura text-white text-[24px] leading-[24px] font-normal">
+                                            class="!mb-[15px] !font-Futura !text-white !text-[24px] !leading-[24px] !font-normal">
                                             Наши контакты</h3>
                                         <p
-                                            class="font-Futura text-white text-[16px] leading-[20px] font-normal mb-[20px]">
+                                            class="!font-Futura !text-white !text-[16px] !leading-[20px] !font-normal !mb-[20px]">
                                             Всё о чём Вы захотите нас
                                             спросить,
                                             помимо представленного материала, мы с удовольствием обсудим с Вами в нашем
                                             офисе
                                             при
                                             личной встрече.</p>
-                                        <address class="!text-[#fff] float-left w-full border-t-[1px] border-solid border-t-[#c1c1c1]
-                                        pt-[20px] relative mb-[20px] not-italic leading-[1.42857143]">
-                                            <ul class="float-left p-0 m-0 list-none">
+                                        <address class="!text-[#fff] !float-left !w-full !border-t-[1px] !border-solid !border-t-[#c1c1c1]
+                                        !pt-[20px] !relative !mb-[20px] !not-italic !leading-[1.42857143]">
+                                            <ul class="!float-left !p-0 !m-0 !list-none">
                                                 <li
-                                                    class="pb-[20px] pl-[26px] font-Futura text-white text-[14px] leading-[14px] font-normal">
-                                                    <i class="absolute left-0 fas fa-home"></i> <b>400001, г.
+                                                    class="!pb-[20px] !pl-[26px] !font-Futura !text-white !text-[14px] !leading-[14px] !font-normal">
+                                                    <i class="!absolute !left-0 fas fa-home"></i> <b>400001, г.
                                                         Волгоград,
                                                         ул. Профсоюзная, 15а</b>
                                                 </li>
                                                 <li
-                                                    class="pb-[20px] pl-[26px] font-Futura text-white text-[14px] leading-[14px] font-normal">
-                                                    <i class="absolute left-0 fas fa-phone-alt"></i> <a
-                                                        class="font-Futura text-white text-[14px] leading-[14px] font-normal"
+                                                    class="!pb-[20px] !pl-[26px] !font-Futura !text-white !text-[14px] !leading-[14px] !font-normal">
+                                                    <i class="!absolute !left-0 fas fa-phone-alt"></i> <a
+                                                        class="!font-Futura !text-white !text-[14px] !leading-[14px] !font-normal"
                                                         href="tel:+7 8442 97 82 97">(8442) 97-82-97</a>
                                                 </li>
                                                 <li
-                                                    class="pb-[20px] pl-[26px] font-Futura text-white text-[14px] leading-[14px] font-normal">
-                                                    <i class="absolute left-0 fas fa-print"></i> <a
-                                                        class="font-Futura text-white text-[14px] leading-[14px] font-normal"
+                                                    class="!pb-[20px] !pl-[26px] !font-Futura !text-white !text-[14px] !leading-[14px] !font-normal">
+                                                    <i class="!absolute !left-0 fas fa-print"></i> <a
+                                                        class="!font-Futura !text-white !text-[14px] !leading-[14px] !font-normal"
                                                         href="tel:+7 8442 97 82 97">(8442)
                                                         97-84-97</a>
                                                 </li>
                                                 <li
-                                                    class="pb-[20px] pl-[26px] font-Futura text-white text-[14px] leading-[14px] font-normal">
-                                                    <i class="absolute left-0 far fa-envelope"></i> <a
-                                                        class="font-Futura text-white text-[14px] leading-[14px] font-normal"
+                                                    class="!pb-[20px] !pl-[26px] !font-Futura !text-white !text-[14px] !leading-[14px] !font-normal">
+                                                    <i class="!absolute !left-0 far fa-envelope"></i> <a
+                                                        class="!font-Futura !text-white !text-[14px] !leading-[14px] !font-normal"
                                                         href="mailto:">info@meyer-law.ru</a>
                                                 </li>
                                             </ul>
@@ -249,8 +249,8 @@
                 </div>
 
 
-                <div class="float-left w-full mt-[60px]">
-                    <div class="h-[450px] w-full">
+                <div class="!float-left !w-full !mt-[60px]">
+                    <div class="!h-[450px] !w-full z-0">
                         <script type="text/javascript" charset="utf-8" async src="../swiper/yandex.js">
                         </script>
                     </div>
