Адаптивность нижнего блока футера

--- a/src/team_detail.html
+++ b/src/team_detail.html
@@ -604,7 +604,7 @@
             </div>
         </section>
 
-        <div class="relative">
+        <div class="relative lg:!block !hidden">
             <div class="fixed bottom-0 left-0 right-0 bg-gray-200">
                 <div class="w-full mx-auto xl:max-w-[1170px] lg:max-w-[970px] max-w-none">
 
