Пофикшен блок в футере

--- a/src/index.html
+++ b/src/index.html
@@ -444,7 +444,7 @@
 			</footer>
 
 		  <div class="relative">
-			<div class="fixed bottom-0 left-0 right-0 bg-gray-200">
+			<div class="fixed bottom-0 left-0 right-0 bg-gray-200 z-[1000]">
 			  <div class="container mx-auto">
 				<div class="flex flex-row w-full">
 				  <div class="columns-md-12 col-sm-12 text-center news-pod py-1 sm:py-3">
